# PACE2024

./: .gitignore  CITATION.cff  CMakeLists.txt  CbcInterface.cpp  CbcInterface.hpp  README.md  graph.h  oscm.cpp
cmake/: FindCBC.cmake  FindCGL.cmake  FindCLP.cmake  FindCOINUTILS.cmake  FindOSI.cmake
cutwidth-public/: 45.gr
tiny_test_set/: complete_4_5  cycle_8_shuffled  cycle_8_sorted  grid_9_shuffled  ladder_4_4_shuffled  ladder_4_4_sorted  matching_4_4  path_9_shuffled  path_9_sorted  plane_5_6  star_6  tree_6_10  website_20
